--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="nav-item dropdown">
                 <a href="#">Sound</a>
                 <div class="dropdown-content">
-                    <a href="#">😈</a>
+                    <a href="./Sound.html">😈</a>
                 </div>
             </div>
             <div class="nav-item dropdown">
