--- a/LA.html
+++ b/LA.html
@@ -32,8 +32,8 @@
                 <a href="#">Photo</a>
                 <div class="dropdown-content">
                     <a href="./LA.html">LA</a>
-                    <a href="#">秊</a>
-                    <a href="#">Landscape</a>
+                    <a href="./秊.html">秊</a>
+                    
                 </div>
             </div>
             <div class="nav-item dropdown">
@@ -42,6 +42,7 @@
                     <a href="./Body.html">Body</a>
                     <a href="./Room.html">Room</a>
                     <a href="./Swing.html">Swing</a>
+                    <a href="./Me.html">Me</a>
                 </div>
             </div>
             <div class="social-icons">
@@ -57,7 +58,7 @@
         <div class="carousel-container">
             <div class="carousel">
                 <div class="carousel-slide active" style="background-image: url('./Website/LA/1.JPG');"></div>
-                <div class="carousel-slide" style="background-image: url('./Website/LA/2.JPG');"></div>
+                <div class="carousel-slide" style="background-image: url('./Website/LA/2.JPG'); background-size: 70%;"></div>
                 <div class="carousel-slide" style="background-image: url('./Website/LA/3.jpg');"></div>
                 <div class="carousel-dots">
                     <span class="dot active" onclick="currentSlide(0)"></span>
