--- a/Swing.html
+++ b/Swing.html
@@ -32,8 +32,8 @@
                 <a href="#">Photo</a>
                 <div class="dropdown-content">
                     <a href="./LA.html">LA</a>
-                    <a href="#">秊</a>
-                    <a href="#">Landscape</a>
+                    <a href="./秊.html">秊</a>
+                    
                 </div>
             </div>
             <div class="nav-item dropdown">
