--- a/PingheGirl.html
+++ b/PingheGirl.html
@@ -32,8 +32,8 @@
                 <a href="#">Photo</a>
                 <div class="dropdown-content">
                     <a href="./LA.html">LA</a>
-                    <a href="#">秊</a>
-                    <a href="#">Landscape</a>
+                    <a href="./秊.html">秊</a>
+                    
                 </div>
             </div>
             <div class="nav-item dropdown">
@@ -42,6 +42,7 @@
                     <a href="./Body.html">Body</a>
                     <a href="./Room.html">Room</a>
                     <a href="./Swing.html">Swing</a>
+                    <a href="./Me.html">Me</a>
                 </div>
             </div>
             <div class="social-icons">
@@ -54,7 +55,7 @@
     </div>
 
     <div class="content-area" style="flex: unset;">
-        <video width="100%" height="100%" src="./Website/PingheGirl/output.mp4" controls></video>
+        <video width="80%" height="80%" src="./Website/PingheGirl/output.mp4" controls></video>
     </div>
 
 </body>
