--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Roselia Wang</title>
     <link rel="stylesheet" href="./common.css">
-    
+    <style>
+        body{
+            background: url('./Website/Body/3.JPG') no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -32,8 +38,7 @@
                 <a href="#">Photo</a>
                 <div class="dropdown-content">
                     <a href="./LA.html">LA</a>
-                    <a href="#">秊</a>
-                    <a href="#">Landscape</a>
+                    <a href="./秊.html">秊</a>
                 </div>
             </div>
             <div class="nav-item dropdown">
@@ -42,6 +47,7 @@
                     <a href="./Body.html">Body</a>
                     <a href="./Room.html">Room</a>
                     <a href="./Swing.html">Swing</a>
+                    <a href="./me.html">Me</a>
                 </div>
             </div>
             <div class="social-icons">
@@ -53,9 +59,9 @@
         </div>
     </div>
 
-    <div class="content-area">
+    <!-- <div class="content-area">
         <img src="./Website/Body/3.JPG" alt="" style="width: 100%; height: 100%;object-fit: contain;">
-    </div>
+    </div> -->
 
 </body>
 
