--- a/Me.html
+++ b/Me.html
@@ -25,7 +25,7 @@
             <div class="nav-item dropdown">
                 <a href="#">Video</a>
                 <div class="dropdown-content" style="width: 160px;">
-                    <a href="./PingheGirl.html">Pinghe Girl</a>
+                    <a href="./PingheGirl.html">PH OASIS</a>
                 </div>
             </div>
             <div class="nav-item dropdown">
@@ -58,14 +58,10 @@
         <div class="carousel-container">
             <div class="carousel">
                 <div class="carousel-slide active" style="background-image: url('./Website/me/1.JPG');"></div>
-                <div class="carousel-slide" style="background-image: url('./Website/me/2.JPG');"></div>
-                <div class="carousel-slide" style="background-image: url('./Website/me/3.JPG');"></div>
                 <div class="carousel-slide" style="background-image: url('./Website/me/4.JPG');"></div>
                 <div class="carousel-dots">
                     <span class="dot active" onclick="currentSlide(0)"></span>
                     <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
                 </div>
             </div>
             <div class="arrow left" onclick="changeSlide(-1)">&#10094;</div>
