--- a/PingheGirl.html
+++ b/PingheGirl.html
@@ -25,7 +25,7 @@
             <div class="nav-item dropdown">
                 <a href="#">Video</a>
                 <div class="dropdown-content" style="width: 160px;">
-                    <a href="./PingheGirl.html">Pinghe Girl</a>
+                    <a href="./PingheGirl.html">PH OASIS</a>
                 </div>
             </div>
             <div class="nav-item dropdown">
@@ -54,8 +54,8 @@
         </div>
     </div>
 
-    <div class="content-area" style="flex: unset;">
-        <video width="80%" height="80%" src="./Website/PingheGirl/output.mp4" controls></video>
+    <div class="content-area" style="display: flex;align-items: center;justify-content: center;">
+        <video width="75%" height="75%" src="./Website/PingheGirl/output.mp4" controls></video>
     </div>
 
 </body>
