--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="nav-item dropdown">
                 <a href="#">Video</a>
                 <div class="dropdown-content" style="width: 160px;">
-                    <a href="./PingheGirl.html">Pinghe Girl</a>
+                    <a href="./PingheGirl.html">PH OASIS</a>
                 </div>
             </div>
             <div class="nav-item dropdown">
