--- a/Body.html
+++ b/Body.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Roselia Wang</title>
-    <link rel="stylesheet" href="./common.css">
+    <link rel="stylesheet" href="./Body.css">
     
 </head>
 
@@ -57,15 +57,17 @@
     <div class="content-area">
         <div class="carousel-container">
             <div class="carousel">
-                <div class="carousel-slide active" style="background-image: url('./Website/Body/1.JPG');"></div>
-                <div class="carousel-slide" style="background-image: url('./Website/Body/2.JPG');"></div>
-                <div class="carousel-slide" style="background-image: url('./Website/Body/3.JPG');"></div>
-                <div class="carousel-slide" style="background-image: url('./Website/Body/4.JPG');"></div>
-                <div class="carousel-dots">
-                    <span class="dot active" onclick="currentSlide(0)"></span>
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
+                <div class="carousel-slide active">
+                    <img src="./Website/Body/1.JPG" style="width: 950px; height:630px; object-fit: contain;" alt="">
+                </div>
+                <div class="carousel-slide">
+                    <img src="./Website/Body/2.JPG" style="width: 419px; height: 670px;" alt="">
+                </div>
+                <div class="carousel-slide">
+                    <img src="./Website/Body/3.JPG" style="width: 419px; height: 670px;" alt="">
+                </div>
+                <div class="carousel-slide">
+                    <img src="./Website/Body/4.JPG" style="width: 950px; height:630px;object-fit: contain;" alt="">
                 </div>
             </div>
             <div class="arrow left" onclick="changeSlide(-1)">&#10094;</div>
