--- a/LA.html
+++ b/LA.html
@@ -58,7 +58,7 @@
         <div class="carousel-container">
             <div class="carousel">
                 <div class="carousel-slide active" style="background-image: url('./Website/LA/1.JPG');"></div>
-                <div class="carousel-slide" style="background-image: url('./Website/LA/2.JPG'); background-size: 70%;"></div>
+                <div class="carousel-slide" style="background-image: url('./Website/LA/2.JPG');"></div>
                 <div class="carousel-slide" style="background-image: url('./Website/LA/3.jpg');"></div>
                 <div class="carousel-dots">
                     <span class="dot active" onclick="currentSlide(0)"></span>
