--- a/Body.html
+++ b/Body.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Roselia Wang</title>
     <link rel="stylesheet" href="./common.css">
+    <style>
+        .a{
+            background-position: center !important;
+        }
+    </style>
     
 </head>
 
@@ -57,17 +62,17 @@
     <div class="content-area">
         <div class="carousel-container">
             <div class="carousel">
-                <div class="carousel-slide active">
-                    <img src="./Website/Body/1.JPG" style="width: 950px; height:630px; object-fit: contain;" alt="">
+                <div class="carousel-slide active a" style="background: url('./Website/Body/1.JPG') no-repeat; background-size: contain;">
+                    <!-- <img src="./Website/Body/1.JPG" alt=""> -->
                 </div>
-                <div class="carousel-slide">
-                    <img src="./Website/Body/2.JPG" style="width: 419px; height: 670px;" alt="">
+                <div class="carousel-slide a" style="background: url('./Website/Body/2.JPG') no-repeat; background-size: contain;">
+                    <!-- <img src="./Website/Body/2.JPG" style="width: 419px; height: 670px;" alt=""> -->
                 </div>
-                <div class="carousel-slide">
-                    <img src="./Website/Body/3.JPG" style="width: 419px; height: 670px;" alt="">
+                <div class="carousel-slide a" style="background: url('./Website/Body/3.JPG') no-repeat; background-size: contain;">
+                    <!-- <img src="./Website/Body/3.JPG" style="width: 419px; height: 670px;" alt=""> -->
                 </div>
-                <div class="carousel-slide">
-                    <img src="./Website/Body/4.JPG" style="width: 950px; height:630px;object-fit: contain;" alt="">
+                <div class="carousel-slide a" style="background: url('./Website/Body/4.JPG') no-repeat; background-size: contain;">
+                    <!-- <img src="./Website/Body/4.JPG" alt=""> -->
                 </div>
             </div>
             <div class="arrow left" onclick="changeSlide(-1)">&#10094;</div>
